--- a/ld48-warmup.html
+++ b/ld48-warmup.html
@@ -6,6 +6,10 @@
   <title>#LD48 Warm-Up</title>
 
   <script type="text/javascript" src="warmup.js"></script>
+  <script type="text/javascript" src="gravity.js"></script>
+  <script type="text/javascript" src="creature.js"></script>
+  <script type="text/javascript" src="zoe.js"></script>
+  <script type="text/javascript" src="map.js"></script>
 
   <link rel="StyleSheet" href="warmup.css" type="text/css" />
 
