Added another creature which will eventually be the bad guy

--- a/ld48-warmup.html
+++ b/ld48-warmup.html
@@ -10,6 +10,7 @@
   <script type="text/javascript" src="creature.js"></script>
   <script type="text/javascript" src="zoe.js"></script>
   <script type="text/javascript" src="map.js"></script>
+  <script type="text/javascript" src="baddie.js"></script>
 
   <link rel="StyleSheet" href="warmup.css" type="text/css" />
 
