--- a/ld48-warmup.html
+++ b/ld48-warmup.html
@@ -11,6 +11,7 @@
   <script type="text/javascript" src="zoe.js"></script>
   <script type="text/javascript" src="map.js"></script>
   <script type="text/javascript" src="baddie.js"></script>
+  <script type="text/javascript" src="key.js"></script>
 
   <link rel="StyleSheet" href="warmup.css" type="text/css" />
 
